test/test-suits/errors/test-11-not_serial_in_rule/input.dhl
\X.\Y.(a(X), c(d(X))) :- b, c . d.
